<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/xxhdpi_30">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/success_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_successful"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/approved_sale_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/approved_sale_txt"
            android:layout_marginTop="@dimen/xxhdpi_20"
            android:textColor="@color/txt_primary_grey"
            android:textSize="@dimen/t_xxh_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/success_icon" />

        <TextView
            android:id="@+id/transaction_td_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/ubuntu_normal"
            android:text="@string/transaction_id_label"
            android:textColor="@color/txt_secondary_grey"
            android:textSize="@dimen/t_xxh_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/approved_sale_txt" />

        <TextView
            android:id="@+id/transaction_td"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_normal"
            android:textColor="@color/txt_secondary_grey"
            android:textSize="@dimen/t_xxh_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/transaction_td_txt"
            tools:text="979393" />

        <TextView
            android:id="@+id/merchant_copy_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/xxhdpi_20"
            android:fontFamily="@font/ubuntu_normal"
            android:text="@string/merchant_copy_txt"
            android:textColor="@color/txt_secondary_grey"
            android:textSize="@dimen/t_xxh_18"
            app:layout_constraintBottom_toTopOf="@+id/divider1"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/print_merchant_copy"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/round_rect"
            android:backgroundTint="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/print_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/merchant_copy_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/merchant_copy_txt" />

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="@dimen/xxhdpi_20"
            android:background="@color/txt_grey"
            app:layout_constraintBottom_toTopOf="@+id/customer_copy_txt" />

        <TextView
            android:id="@+id/customer_copy_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/xxhdpi_20"
            android:fontFamily="@font/ubuntu_normal"
            android:text="@string/customer_copy_txt"
            android:textColor="@color/txt_secondary_grey"
            android:textSize="@dimen/t_xxh_18"
            app:layout_constraintBottom_toTopOf="@+id/divider2"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/print_customer_copy"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/round_rect"
            android:backgroundTint="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/print_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/customer_copy_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/customer_copy_txt" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="@dimen/xxhdpi_20"
            android:background="@color/txt_grey"
            app:layout_constraintBottom_toTopOf="@+id/whats_app_copy_txt" />

        <TextView
            android:id="@+id/whats_app_copy_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/xxhdpi_20"
            android:fontFamily="@font/ubuntu_normal"
            android:text="@string/send_customer"
            android:textColor="@color/txt_secondary_grey"
            android:textSize="@dimen/t_xxh_18"
            app:layout_constraintBottom_toTopOf="@+id/divider3"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/send_customer_copy"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/round_rect"
            android:backgroundTint="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/whats_app_copy_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/whats_app_copy_txt" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="@dimen/xxhdpi_20"
            android:background="@color/txt_grey"
            app:layout_constraintBottom_toTopOf="@+id/payment_complete" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/payment_complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rect_bor_blue"
            android:text="@string/btn_done"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:id="@+id/progress_bar"
            android:clickable="false"
            android:visibility="gone"
            android:layout_height="match_parent">
            <ProgressBar app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>