<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/coordinatorLayout"
        android:background="@color/white"
        tools:context=".ui.ezyWire.EzyWireActivity">
        <LinearLayout app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal"
            android:id="@+id/header_tool_bar"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="55dp" >
            <ImageView android:src="@drawable/ic_arrow_back"
                android:id="@+id/back_icon"
                android:layout_width="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_height="wrap_content" />
            <TextView android:layout_marginLeft="20dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/t_xxh_20"
                android:fontFamily="@font/ubuntu_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/insert_card_relative"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/header_tool_bar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="visible"
            android:background="@color/background_grey">

            <ImageView
                android:id="@+id/tap_card"
                android:layout_width="@dimen/view_size_70"
                android:layout_height="@dimen/view_size_70"
                android:src="@drawable/ic_tap_card"
                app:layout_constraintBottom_toTopOf="@+id/card_swipe"
                app:layout_constraintEnd_toStartOf="@+id/imageView"
                app:layout_constraintHorizontal_bias="0.5"
                android:layout_marginLeft="@dimen/xxhdpi_30"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/view_size_70"
                android:layout_height="@dimen/view_size_70"
                android:src="@drawable/ic_insert_card"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="@dimen/xxhdpi_30"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tap_card"
                app:layout_constraintBottom_toBottomOf="@+id/tap_card"
                app:layout_constraintTop_toTopOf="@+id/tap_card" />

            <TextView
                android:id="@+id/card_swipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/xxhdpi_30"
                android:layout_marginLeft="@dimen/xxhdpi_20"
                android:layout_marginBottom="@dimen/t_xxh_16"
                android:fontFamily="@font/ubuntu_bold"
                android:text="@string/tap_or_insert_your_card"
                android:textColor="@color/txt_primary_grey"
                android:textSize="@dimen/heading_size"
                app:layout_constraintBottom_toTopOf="@+id/card_completion_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tap_card"
                android:layout_marginStart="@dimen/xxhdpi_20" />

            <TextView
                android:id="@+id/card_completion_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/xxhdpi_20"
                android:layout_marginBottom="@dimen/t_xxh_16"
                android:fontFamily="@font/ubuntu_normal"
                android:text="@string/to_complete_transaction"
                android:textColor="@color/txt_primary_grey"
                android:textSize="@dimen/heading_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_swipe" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:id="@+id/pin_enter_relative"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/transaction_failure_relative"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/header_tool_bar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/white"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/failed"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/xxhdpi_50"
                    android:layout_marginRight="@dimen/xxhdpi_50"
                    android:layout_marginTop="@dimen/xxhdpi_5"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="@dimen/t_xxh_20"
                    android:text="OOPS"/>

                <TextView
                    android:id="@+id/failure_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/xxhdpi_50"
                    android:layout_marginRight="@dimen/xxhdpi_50"
                    android:layout_marginTop="@dimen/xxhdpi_20"
                    android:textColor="@color/colorPrimary"

                    android:gravity="center"
                    android:textSize="@dimen/t_xxh_14"
                    android:text="Your Transaction has been declined by Card"/>

                <Button
                    android:id="@+id/failure_try_again_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/xxhdpi_50"
                    android:layout_marginRight="@dimen/xxhdpi_50"
                    android:layout_marginTop="@dimen/xxhdpi_20"
                    android:background="@color/green"
                    android:text="Try Again"
                    android:textStyle="bold"
                    android:textSize="@dimen/t_xxh_18"
                    android:textColor="@color/white"/>

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/signature_relative"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/header_tool_bar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/white"
            android:visibility="gone">

            <com.mobiversa.ezy2pay.ui.ezyWire.SignatureView
                android:id="@+id/signature_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/sign_amt_linear"/>

            <Button
                android:id="@+id/btn_sign_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@null"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:text="Clear"/>

            <LinearLayout
                android:id="@+id/sign_amt_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/btn_sign_payment"
                android:background="@color/light_blue"
                android:padding="@dimen/xxhdpi_20"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/sign_amt_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="RM 0.00"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/t_xxh_24"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="I authorize to charge in my card the amount above."
                    android:layout_marginTop="@dimen/xxhdpi_5"
                    android:gravity="center"
                    android:lineSpacingExtra="2dp"

                    android:textColor="@color/txt_clr"
                    android:textSize="@dimen/t_xxh_14"/>

            </LinearLayout>

            <Button
                android:id="@+id/btn_sign_payment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Confirm Payment"
                android:background="@color/green"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/t_xxh_16"
                android:layout_alignParentBottom="true"/>


        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>